@@ -37,8 +37,9 @@ sort.list(x, partial = NULL, na.last = TRUE, decreasing = FALSE,
     \code{FALSE}, they are put first; if \code{NA}, they are removed
     (see \sQuote{Note}.)}
   \item{method}{the method to be used: partial matches are allowed.  The
-    default (\code{"auto"}) implies \code{"radix"} for integer vectors,
-    logical vectors and factors. Otherwise, it implies \code{"shell"}.
+    default (\code{"auto"}) implies \code{"radix"} for short numeric vectors,
+    integer vectors, logical vectors and factors.
+    Otherwise, it implies \code{"shell"}.
     For details of methods \code{"shell"}, 
     \code{"quick"}, and \code{"radix"},
     see the help for \code{\link{sort}}.}
@@ -58,14 +59,14 @@ sort.list(x, partial = NULL, na.last = TRUE, decreasing = FALSE,
   \code{\link{Comparison}}.
 
   The \code{"shell"} method is generally the safest bet and is the
-  default method, except for factors and integer vectors, where
-  \code{"radix"} is assumed. Method \code{"radix"} stably sorts logical,
+  default method, except for short factors, numeric vectors,
+  integer vectors and logical vectors, where \code{"radix"} is assumed.
+  Method \code{"radix"} stably sorts logical,
   numeric and character vectors in linear time. It outperforms the other
   methods, although there are caveats (see \code{\link{sort}}).  Method
   \code{"quick"} for \code{sort.list} is only supported for numeric
   \code{x} with \code{na.last = NA}, is not stable, and is slower than
-  \code{"radix"}. The \code{"radix"} method has less precision when
-  sorting real-valued numbers.
+  \code{"radix"}. 
   
   \code{partial = NULL} is supported for compatibility with other
   implementations of S, but no other values are accepted and ordering is
